--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+@layer components{
+    .main-button{
+        @apply py-1 px-5 text-sm font-bold text-white tracking-widest uppercase;
+    }
+
+    .nav-links{
+        @apply block text-white text-sm font-medium duration-300 hover:text-[#CA8E46] md:bg-transparent mb-2 md:p-0;
+    }
+
+    .card{
+        @apply py-8 px-8 text-white flex items-center;
+    }
+
+    .card2{
+        @apply flex text-white items-start
+    }
+
+    .label{
+        @apply text-white text-lg tracking-wider font-bold block mb-2
+    }
+    
+    .form-count-btn{
+        @apply w-10 h-10 pb-1 text-white text-2xl font-bold
+    }
+
+    .form-input-count{
+        @apply w-40 px-2 font-light tracking-wider bg-transparent text-white border border-white/30 h-10 mx-1.5 text-center outline-none focus:ring-1 focus:ring-blue-700
+    }
+
+    .form-input{
+        @apply w-full mb-5 px-2 font-light tracking-wider bg-transparent text-white border border-white/30 h-10 text-start outline-none focus:ring-1 focus:ring-blue-700
+    }
+
+    .form-time-btn{
+        @apply py-2 px-4 font-light text-white text-sm hover:bg-color1 duration-300 rounded-md bg-transparent border border-white/30
+    }
+
+    .contact-heading{
+        @apply text-white text-2xl tracking-wider mb-4 uppercase max-sm:text-lg
+    }
+
+    .contact-label{
+        @apply color1 font-normal mr-2
+    }
+
+    .contact-text{
+        @apply text-white mb-3 text-[14.5px]
+    }
+
+    .single-info-text{
+        @apply flex justify-center items-center text-xl text-white font-light tracking-wider max-md:justify-start
+    }
+
+    .single-info-li{
+        @apply flex items-center mb-2 text-[14.5px]
+    }
+
+    .check-icon{
+        @apply mr-2 h-5 w-auto color1
+    }
+
+    .color1{
+        @apply text-[#CA8E46]
+    }
+
+    .bg-color1{
+        @apply bg-[#CA8E46]
+    }
+
+    .select *{
+        @apply text-black
+    }
 }
