--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,17 @@
   background-color: #CA8E46
 }
 
+.swiper-pagination-bullet{
+  background-color: white !important;
+  opacity: 1 !important;
+  width: 5px !important;
+  height: 5px !important;
+}
+
+.swiper-pagination-bullet-active{
+  background: #CA8E46 !important;
+}
+
 .img-div {
   position: relative;
   display: flex;
