--- a/src/index.css
+++ b/src/index.css
@@ -75,4 +75,8 @@
     .select *{
         @apply text-black
     }
+
+    .calendaer-dates{
+        @apply border-gray-600 border border-t-0 duration-300 text-sm font-semibold
+    }
 }
